--- a/YellowstonePathology/UI/Test/HER2AmplificationByISHResultPage.xaml
+++ b/YellowstonePathology/UI/Test/HER2AmplificationByISHResultPage.xaml
@@ -217,26 +217,29 @@
                     <TextBlock Grid.Column="0" Grid.Row="17" Margin="2" VerticalAlignment="Center" FontWeight="Bold">HER2 IHC Required:</TextBlock>
                     <CheckBox Grid.Column="1" Grid.Row="17" Margin="2" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.HER2ByIHCRequired}" />
 
-                    <TextBlock Grid.Column="0" Grid.Row="18" Margin="2" VerticalAlignment="Center" FontWeight="Bold">Tech Comment:</TextBlock>
-					<TextBox Grid.Column="0" Grid.Row="19" Margin="2" Grid.ColumnSpan="2" AcceptsReturn="True" TextWrapping="Wrap" Text="{Binding Path=PanelSetOrder.TechComment}" />
+                    <TextBlock Grid.Column="0" Grid.Row="18" Margin="2" VerticalAlignment="Center" FontWeight="Bold">Recount Required:</TextBlock>
+                    <CheckBox Grid.Column="1" Grid.Row="18" Margin="2" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.RecountRequired}" />
 
-					<TextBlock Grid.Column="0" Grid.Row="20" Margin="2" FontWeight="Bold" VerticalAlignment="Center">Result Comment:</TextBlock>
-					<TextBox Grid.Column="0" Grid.Row="21" Margin="2" Grid.ColumnSpan="2" AcceptsReturn="True" TextWrapping="Wrap" Text="{Binding Path=PanelSetOrder.ResultComment}" />
+                    <TextBlock Grid.Column="0" Grid.Row="19" Margin="2" VerticalAlignment="Center" FontWeight="Bold">Tech Comment:</TextBlock>
+					<TextBox Grid.Column="0" Grid.Row="20" Margin="2" Grid.ColumnSpan="2" AcceptsReturn="True" TextWrapping="Wrap" Text="{Binding Path=PanelSetOrder.TechComment}" />
 
-					<TextBlock Grid.Column="0" Grid.Row="22" Margin="2" FontWeight="Bold" VerticalAlignment="Center">Interpretation Comments:</TextBlock>
-					<TextBox Grid.Column="0" Grid.Row="23" Grid.ColumnSpan="2" AcceptsReturn="True" TextWrapping="Wrap" Margin="2" Text="{Binding Path=PanelSetOrder.InterpretiveComment}" />
+					<TextBlock Grid.Column="0" Grid.Row="21" Margin="2" FontWeight="Bold" VerticalAlignment="Center">Result Comment:</TextBlock>
+					<TextBox Grid.Column="0" Grid.Row="22" Margin="2" Grid.ColumnSpan="2" AcceptsReturn="True" TextWrapping="Wrap" Text="{Binding Path=PanelSetOrder.ResultComment}" />
 
-					<TextBlock Grid.Column="0" Grid.Row="24" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">Method:</TextBlock>
-                    <TextBox Grid.Column="0" Grid.Row="25" Grid.ColumnSpan="2" Margin="2,2,2,2" VerticalAlignment="Center" Text="{Binding Path=PanelSetOrder.Method}" TextWrapping="Wrap" AcceptsReturn="True" />
+					<TextBlock Grid.Column="0" Grid.Row="23" Margin="2" FontWeight="Bold" VerticalAlignment="Center">Interpretation Comments:</TextBlock>
+					<TextBox Grid.Column="0" Grid.Row="24" Grid.ColumnSpan="2" AcceptsReturn="True" TextWrapping="Wrap" Margin="2" Text="{Binding Path=PanelSetOrder.InterpretiveComment}" />
 
-					<TextBlock Grid.Column="0" Grid.Row="26" FontWeight="Bold" Margin="2" VerticalAlignment="Center">Report Reference:</TextBlock>
-                    <TextBox Grid.Column="0" Grid.Row="27" Grid.ColumnSpan="2" TextWrapping="Wrap" Margin="2" VerticalAlignment="Center" Text="{Binding Path=PanelSetOrder.ReportReference}" AcceptsReturn="True" />
+					<TextBlock Grid.Column="0" Grid.Row="25" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">Method:</TextBlock>
+                    <TextBox Grid.Column="0" Grid.Row="26" Grid.ColumnSpan="2" Margin="2,2,2,2" VerticalAlignment="Center" Text="{Binding Path=PanelSetOrder.Method}" TextWrapping="Wrap" AcceptsReturn="True" />
 
-                    <TextBlock Grid.Column="0" Grid.Row="28" FontWeight="Bold" Margin="2" VerticalAlignment="Center">Fixation Comment:</TextBlock>
-                    <TextBox Grid.Column="0" Grid.Row="29" Grid.ColumnSpan="2" TextWrapping="Wrap" Margin="2" AcceptsReturn="True" VerticalAlignment="Center" Text="{Binding Path=SpecimenOrder.FixationComment}" />
+					<TextBlock Grid.Column="0" Grid.Row="27" FontWeight="Bold" Margin="2" VerticalAlignment="Center">Report Reference:</TextBlock>
+                    <TextBox Grid.Column="0" Grid.Row="28" Grid.ColumnSpan="2" TextWrapping="Wrap" Margin="2" VerticalAlignment="Center" Text="{Binding Path=PanelSetOrder.ReportReference}" AcceptsReturn="True" />
 
-                    <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="30" FontWeight="Bold" Margin="2,2,2,2">Current Orders</TextBlock>
-                    <ListView Name="ListBoxPanelSetOrders" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="31" Margin="2,2,2,2" HorizontalAlignment="Stretch"
+                    <TextBlock Grid.Column="0" Grid.Row="29" FontWeight="Bold" Margin="2" VerticalAlignment="Center">Fixation Comment:</TextBlock>
+                    <TextBox Grid.Column="0" Grid.Row="30" Grid.ColumnSpan="2" TextWrapping="Wrap" Margin="2" AcceptsReturn="True" VerticalAlignment="Center" Text="{Binding Path=SpecimenOrder.FixationComment}" />
+
+                    <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="31" FontWeight="Bold" Margin="2,2,2,2">Current Orders</TextBlock>
+                    <ListView Name="ListBoxPanelSetOrders" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="32" Margin="2,2,2,2" HorizontalAlignment="Stretch"
                       ItemsSource="{Binding Path=AccessionOrder.PanelSetOrderCollection}">
                         <ListView.View>
                             <GridView>
@@ -249,13 +252,13 @@
                         </ListView.View>
                     </ListView>
 
-                    <TextBlock Grid.Column="0" Grid.Row="32" Margin="2,2,2,2" FontWeight="Bold">Distribute:</TextBlock>
-					<CheckBox Grid.Column="1" Grid.Row="32" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.Distribute}"></CheckBox>
+                    <TextBlock Grid.Column="0" Grid.Row="33" Margin="2,2,2,2" FontWeight="Bold">Distribute:</TextBlock>
+					<CheckBox Grid.Column="1" Grid.Row="33" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.Distribute}"></CheckBox>
 
-                    <TextBlock Grid.Column="0" Grid.Row="33" Margin="2,2,2,2" FontWeight="Bold">No Charge:</TextBlock>
-                    <CheckBox Grid.Column="1" Grid.Row="33" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.NoCharge}"></CheckBox>
+                    <TextBlock Grid.Column="0" Grid.Row="34" Margin="2,2,2,2" FontWeight="Bold">No Charge:</TextBlock>
+                    <CheckBox Grid.Column="1" Grid.Row="34" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.NoCharge}"></CheckBox>
 
-                    <Grid Grid.Column="0" Grid.Row="34" Grid.ColumnSpan="2">
+                    <Grid Grid.Column="0" Grid.Row="35" Grid.ColumnSpan="2">
 						<Grid.ColumnDefinitions>
 							<ColumnDefinition Width="Auto"></ColumnDefinition>
 							<ColumnDefinition Width="*"></ColumnDefinition>
