--- a/YellowstonePathology/UI/MaterialTracking/MaterialBatchPage.xaml
+++ b/YellowstonePathology/UI/MaterialTracking/MaterialBatchPage.xaml
@@ -51,8 +51,8 @@
                 <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=MaterialTrackingBatch.Description}" HorizontalAlignment="Stretch"></TextBox>
                 
                 <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" Text="From Facility:" />
-                <ComboBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=FacilityCollection}" SelectedValuePath="FacilityId" DisplayMemberPath="FacilityName"
-				                SelectedValue="{Binding Path=MaterialTrackingBatch.FromFacilityId}" />
+                <ComboBox Name="ComboboxFromFacility" Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=FacilityCollection}" SelectedValuePath="FacilityId" DisplayMemberPath="FacilityName"
+				                SelectedValue="{Binding Path=MaterialTrackingBatch.FromFacilityId}" SelectionChanged="ComboboxFromFacility_SelectionChanged"/>
 
                 <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" Text="From Location:" />
                 <ComboBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=LocationList}" SelectedValue="{Binding Path=MaterialTrackingBatch.FromLocation}" />
