--- a/YellowstonePathology/UI/Test/HER2AmplificationRecountResultPage.xaml
+++ b/YellowstonePathology/UI/Test/HER2AmplificationRecountResultPage.xaml
@@ -41,10 +41,6 @@
 
                 <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Options</TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">                    
-                    <Hyperlink Click="HyperLinkSetResults_Click">Set Results</Hyperlink>
-                </TextBlock>
-
                 <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkAcceptResults_Click">Accept Results</Hyperlink>
                 </TextBlock>
@@ -81,24 +77,19 @@
                     </Grid.RowDefinitions>
 
                     <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,5" FontWeight="Bold" VerticalAlignment="Center">Ordered On:</TextBlock>
-                    <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,5"></TextBlock>
-                    <!--<TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,5" Text="{Binding Path=OrderedOnDescription}"></TextBlock>-->
+                    <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,5" Text="{Binding Path=OrderedOnDescription}"></TextBlock>
 
                     <TextBlock Grid.Column="0" Grid.Row="1" Margin="2" VerticalAlignment="Center" FontWeight="Bold">Total Cells Counted:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="1" Margin="2" />
-                    <!--<TextBox Grid.Column="1" Grid.Row="1" Margin="2" Text="{Binding Path=PanelSetOrder.CellsCountedUI}" />-->
+                    <TextBox Grid.Column="1" Grid.Row="1" Margin="2" Text="{Binding Path=PanelSetOrder.CellsCountedUI}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="2" Margin="2" VerticalAlignment="Center" FontWeight="Bold">Total HER2 Signals Counted:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="2"  Margin="2" />
-                    <!--<TextBox Grid.Column="1" Grid.Row="2"  Margin="2" Text="{Binding Path=PanelSetOrder.TotalHer2SignalsCountedUI}" />-->
+                    <TextBox Grid.Column="1" Grid.Row="2"  Margin="2" Text="{Binding Path=PanelSetOrder.Her2SignalsCountedUI}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="3" Margin="2" VerticalAlignment="Center" FontWeight="Bold">Total CHR17 Signals Counted:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="3" Margin="2" />
-                    <!--<TextBox Grid.Column="1" Grid.Row="3" Margin="2" Text="{Binding Path=PanelSetOrder.TotalChr17SignalsCountedUI}" />-->
+                    <TextBox Grid.Column="1" Grid.Row="3" Margin="2" Text="{Binding Path=PanelSetOrder.Chr17SignalsCountedUI}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="4" Margin="2" VerticalAlignment="Center" FontWeight="Bold">Ratio of average HER2/CHR17 signals:</TextBlock>
-                    <TextBlock Grid.Column="1" Grid.Row="4" Margin="2" VerticalAlignment="Center" />
-                    <!--<TextBlock Grid.Column="1" Grid.Row="4" Margin="2" VerticalAlignment="Center" Text="{Binding Path=PanelSetOrder.AverageHer2Chr17Signal}" />-->
+                    <TextBlock Grid.Column="1" Grid.Row="4" Margin="2" VerticalAlignment="Center" Text="{Binding Path=PanelSetOrder.AverageHer2Chr17Signal}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" FontWeight="Bold">Distribute:</TextBlock>
                     <CheckBox Grid.Column="1" Grid.Row="5" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.Distribute}"></CheckBox>
