--- a/YellowstonePathology/UI/Billing/BillingPage.xaml
+++ b/YellowstonePathology/UI/Billing/BillingPage.xaml
@@ -60,7 +60,8 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>                    
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
                 </Grid.RowDefinitions>
 
@@ -159,7 +160,10 @@
                 <TextBlock Grid.Column="0" Grid.Row="21" Margin="2,2,2,2" TextAlignment="Right" VerticalAlignment="Center" FontWeight="Bold">Research Testing:</TextBlock>
                 <CheckBox Grid.Column="1" Grid.Row="21" Margin="2,2,2,2" HorizontalAlignment="Left" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.ResearchTesting}" />
 
-                <ListView Name="ListViewDocuments" Grid.Column="0" Grid.Row="22" Grid.ColumnSpan="2" ItemsSource="{Binding Path=CaseDocumentCollection}" 
+                <TextBlock Grid.Column="0" Grid.Row="22" Margin="2,2,2,2" TextAlignment="Right" FontWeight="Bold">MRN:</TextBlock>
+                <TextBlock Grid.Column="1" Grid.Row="22" Margin="2,2,2,2" Text="{Binding Path=AccessionOrder.SvhMedicalRecord}" HorizontalAlignment="Stretch"></TextBlock>
+                
+                <ListView Name="ListViewDocuments" Grid.Column="0" Grid.Row="23" Grid.ColumnSpan="2" ItemsSource="{Binding Path=CaseDocumentCollection}" 
                           MouseDoubleClick="ListViewDocuments_MouseDoubleClick">
                     <ListView.View>
                         <GridView>
@@ -187,6 +191,7 @@
                         <GridViewColumn DisplayMemberBinding="{Binding Path=PostDate, Converter={StaticResource ShortDateConverter}}" Header="Post Date" Width="120"/>
                         <GridViewColumn DisplayMemberBinding="{Binding Path=EntryType}" Header="Entry Type" Width="100"/>
                         <GridViewColumn DisplayMemberBinding="{Binding Path=ClientId}" Header="Client" Width="100"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=MedicalRecord}" Header="MRN" Width="100"/>
                     </GridView>
                 </ListView.View>
             </ListView>
@@ -211,6 +216,7 @@
                         <GridViewColumn DisplayMemberBinding="{Binding Path=BillBy}" Header="Bill By" Width="100"/>
                         <GridViewColumn DisplayMemberBinding="{Binding Path=PostDate, Converter={StaticResource ShortDateConverter}}" Header="Post Date" Width="120"/>
                         <GridViewColumn DisplayMemberBinding="{Binding Path=ClientId}" Header="Client" Width="100"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=MedicalRecord}" Header="MRN" Width="100"/>
                     </GridView>
                 </ListView.View>
             </ListView>
