--- a/YellowstonePathology/UI/PDFTransferDialog.xaml
+++ b/YellowstonePathology/UI/PDFTransferDialog.xaml
@@ -14,13 +14,15 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
         
         <ListView Name="ListViewFiles" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" ItemsSource="{Binding Path=Files}" SelectionChanged="ListViewFiles_SelectionChanged" Margin="2,2,2,2">
             <ListView.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="Open PDF" Click="MenuItemOpenPDF_Click"></MenuItem>
-                    <MenuItem Header="Testing" Click="MenuItemTesting_Click"></MenuItem>
+                    <MenuItem Header="Move To Done" Click="MenuItemMoveToDone_Click"></MenuItem>
+                    <MenuItem Header="Refresh" Click="MenuItemRefresh_Click"></MenuItem>
                 </ContextMenu>
             </ListView.ContextMenu>
             <ListView.View>
@@ -34,7 +36,8 @@
             <ListView.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="Link PDF To This Order" Click="MenuItemLinkPDF_Click"></MenuItem>
-                    <MenuItem Header="View Result Page" Click="MenuItemViewResultPage"></MenuItem>
+                    <MenuItem Header="View Result Page" Click="MenuItemViewResultPage_Click"></MenuItem>
+                    <MenuItem Header="View Assignment Page" Click="MenuItemViewAssignmentPage_Click"></MenuItem>
                 </ContextMenu>
             </ListView.ContextMenu>
             <ListView.View>
@@ -52,5 +55,9 @@
                 </GridView>
             </ListView.View>
         </ListView>
+
+        <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2">                    
+                    <Hyperlink Click="HyperLinkOpenFolder_Click">Open Folder</Hyperlink>
+        </TextBlock>
     </Grid>
 </Window>
