--- a/YellowstonePathology/UI/Billing/BillingPage.xaml
+++ b/YellowstonePathology/UI/Billing/BillingPage.xaml
@@ -58,10 +58,6 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
                 </Grid.RowDefinitions>
 
@@ -142,28 +138,46 @@
                     <ComboBoxItem Content="Cosmetic"></ComboBoxItem>
                 </ComboBox>
 
-                <TextBlock Grid.Column="0" Grid.Row="16" Margin="2,2,2,2" TextAlignment="Right" VerticalAlignment="Center" FontWeight="Bold">Posted:</TextBlock>
-                <CheckBox Grid.Column="1" Grid.Row="16" Margin="2,2,2,2" HorizontalAlignment="Left" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.IsPosted}" />
+                <TextBlock Grid.Column="0" Grid.Row="16" Margin="2,2,2,2" TextAlignment="Right" FontWeight="Bold">MRN:</TextBlock>
+                <TextBlock Grid.Column="1" Grid.Row="16" Margin="2,2,2,2" Text="{Binding Path=AccessionOrder.SvhMedicalRecord}" HorizontalAlignment="Stretch"></TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="17" Margin="2,2,2,2" TextAlignment="Right" VerticalAlignment="Center" FontWeight="Bold">No Charge:</TextBlock>
-                <CheckBox Grid.Column="1" Grid.Row="17" Margin="2,2,2,2" HorizontalAlignment="Left" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.NoCharge}" />
+                <TextBlock Grid.Column="0" Grid.Row="17" Margin="2,2,2,2" TextAlignment="Right" FontWeight="Bold">Place Of Service:</TextBlock>
+                <TextBlock Grid.Column="1" Grid.Row="17" Margin="2,2,2,2" Text="{Binding Path=AccessionOrder.PlaceOfService}" HorizontalAlignment="Stretch"></TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="18" Margin="2,2,2,2" TextAlignment="Right" VerticalAlignment="Center" FontWeight="Bold">Hold Billing:</TextBlock>
-                <CheckBox Grid.Column="1" Grid.Row="18" Margin="2,2,2,2" HorizontalAlignment="Left" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.HoldBilling}" />
+                <Grid Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="18">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                    </Grid.RowDefinitions>
 
-                <TextBlock Grid.Column="0" Grid.Row="19" Margin="2,2,2,2" TextAlignment="Right" VerticalAlignment="Center" FontWeight="Bold">14 Days Post:</TextBlock>
-                <CheckBox Grid.Column="1" Grid.Row="19" Margin="2,2,2,2" HorizontalAlignment="Left" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.Ordered14DaysPostDischarge}" />
+                    <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" TextAlignment="Right" VerticalAlignment="Center" FontWeight="Bold">Posted:</TextBlock>
+                    <CheckBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Left" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.IsPosted}" />
 
-                <TextBlock Grid.Column="0" Grid.Row="20" Margin="2,2,2,2" TextAlignment="Right" VerticalAlignment="Center" FontWeight="Bold">Use Billing Agent:</TextBlock>
-                <CheckBox Grid.Column="1" Grid.Row="20" Margin="2,2,2,2" HorizontalAlignment="Left" VerticalAlignment="Center" IsChecked="{Binding Path=AccessionOrder.UseBillingAgent}" />
+                    <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" TextAlignment="Right" VerticalAlignment="Center" FontWeight="Bold">No Charge:</TextBlock>
+                    <CheckBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Left" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.NoCharge}" />
 
-                <TextBlock Grid.Column="0" Grid.Row="21" Margin="2,2,2,2" TextAlignment="Right" VerticalAlignment="Center" FontWeight="Bold">Research Testing:</TextBlock>
-                <CheckBox Grid.Column="1" Grid.Row="21" Margin="2,2,2,2" HorizontalAlignment="Left" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.ResearchTesting}" />
+                    <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" TextAlignment="Right" VerticalAlignment="Center" FontWeight="Bold">Hold Billing:</TextBlock>
+                    <CheckBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" HorizontalAlignment="Left" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.HoldBilling}" />
 
-                <TextBlock Grid.Column="0" Grid.Row="22" Margin="2,2,2,2" TextAlignment="Right" FontWeight="Bold">MRN:</TextBlock>
-                <TextBlock Grid.Column="1" Grid.Row="22" Margin="2,2,2,2" Text="{Binding Path=AccessionOrder.SvhMedicalRecord}" HorizontalAlignment="Stretch"></TextBlock>
+                    <TextBlock Grid.Column="2" Grid.Row="0" Margin="2,2,2,2" TextAlignment="Right" VerticalAlignment="Center" FontWeight="Bold">14 Days Post:</TextBlock>
+                    <CheckBox Grid.Column="3" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Left" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.Ordered14DaysPostDischarge}" />
+
+                    <TextBlock Grid.Column="2" Grid.Row="1" Margin="2,2,2,2" TextAlignment="Right" VerticalAlignment="Center" FontWeight="Bold">Use Billing Agent:</TextBlock>
+                    <CheckBox Grid.Column="3" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Left" VerticalAlignment="Center" IsChecked="{Binding Path=AccessionOrder.UseBillingAgent}" />
+
+                    <TextBlock Grid.Column="2" Grid.Row="2" Margin="2,2,2,2" TextAlignment="Right" VerticalAlignment="Center" FontWeight="Bold">Research Testing:</TextBlock>
+                    <CheckBox Grid.Column="3" Grid.Row="2" Margin="2,2,2,2" HorizontalAlignment="Left" VerticalAlignment="Center" IsChecked="{Binding Path=PanelSetOrder.ResearchTesting}" />
+                    
+                </Grid>
                 
-                <ListView Name="ListViewDocuments" Grid.Column="0" Grid.Row="23" Grid.ColumnSpan="2" ItemsSource="{Binding Path=CaseDocumentCollection}" 
+                <ListView Name="ListViewDocuments" Grid.Column="0" Grid.Row="19" Grid.ColumnSpan="2" ItemsSource="{Binding Path=CaseDocumentCollection}" 
                           MouseDoubleClick="ListViewDocuments_MouseDoubleClick">
                     <ListView.View>
                         <GridView>
