--- a/YellowstonePathology/UI/Login/SearchSelectionPage.xaml
+++ b/YellowstonePathology/UI/Login/SearchSelectionPage.xaml
@@ -140,6 +140,7 @@
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="*"></RowDefinition>
                     </Grid.RowDefinitions>
 
@@ -153,6 +154,9 @@
                     <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" Text="Posted:" />
                     <TextBox Name="TextBoxPostDate" Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" HorizontalAlignment="Stretch" Text="{Binding Path=PostDate, Converter={StaticResource ShortDateConverter}}"/>
                     <Button Grid.Column="2" Grid.Row="2" Width="75" Height="25" Margin="2,2,2,2"  Click="ButtonPosted_Click">Search</Button>
+
+                    <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" Text="SVH Final Not Posted:" />
+                    <Button Grid.Column="2" Grid.Row="3" Width="75" Height="25" Margin="2,2,2,2"  Click="ButtonSVHFinalNotPostedSearch_Click">Search</Button>
 
                 </Grid>
             </TabItem>                 
