--- a/YellowstonePathology/UI/Billing/BillingWindowSecondary.xaml
+++ b/YellowstonePathology/UI/Billing/BillingWindowSecondary.xaml
@@ -1,7 +1,6 @@
 ﻿<Window x:Class="YellowstonePathology.UI.Billing.BillingWindowSecondary"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Height="800" Width="1150" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid>
         <ContentControl Name="MainContent" Grid.Column="0"></ContentControl>
     </Grid>
