--- a/YellowstonePathology/UI/Test/MDSByFishResultPage.xaml
+++ b/YellowstonePathology/UI/Test/MDSByFishResultPage.xaml
@@ -29,7 +29,8 @@
 
 			<Grid Grid.Column="0" Margin="10" Width="120">
 				<Grid.RowDefinitions>
-					<RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
 					<RowDefinition Height="Auto"></RowDefinition>
 					<RowDefinition Height="Auto"></RowDefinition>
 					<RowDefinition Height="Auto"></RowDefinition>
@@ -42,30 +43,33 @@
 				</Grid.RowDefinitions>
 
 				<TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Results</TextBlock>
-				<TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">
+                <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">
+                    <Hyperlink Click="HyperLinkCPTCodes_Click">CPT Codes</Hyperlink>
+                </TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkNormal_Click">Normal</Hyperlink>
 				</TextBlock>
-				<TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,5">
+				<TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,5">
                     <Hyperlink Click="HyperLinkAbnormal_Click">Abnormal</Hyperlink>
 				</TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">                    
+				<TextBlock Grid.Column="0" Grid.Row="4" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkAcceptResults_Click">Accept Results</Hyperlink>
 				</TextBlock>
 
-                <TextBlock Name="TextBlockShowDocument" Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">                    
+                <TextBlock Name="TextBlockShowDocument" Grid.Column="0" Grid.Row="6" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkShowDocument_Click">Show Document</Hyperlink>
 				</TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,5">
+				<TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,5">
 					<Hyperlink Click="HyperLinkFinalizeResults_Click">Finalize</Hyperlink>
 				</TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">                    
+				<TextBlock Grid.Column="0" Grid.Row="9" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkUnacceptResults_Click">Unaccept Results</Hyperlink>
 				</TextBlock>
 
-                <TextBlock Name="TextBlockUnfinalResults" Grid.Column="0" Grid.Row="9" Margin="5,3,0,0">                    
+                <TextBlock Name="TextBlockUnfinalResults" Grid.Column="0" Grid.Row="10" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkUnfinalResults_Click">Unfinalize Results</Hyperlink>
 				</TextBlock>
 
