--- a/YellowstonePathology/UI/Billing/AddCPTCodePage.xaml
+++ b/YellowstonePathology/UI/Billing/AddCPTCodePage.xaml
@@ -1,11 +1,10 @@
-﻿<Window x:Class="YellowstonePathology.UI.Billing.AddCPTCodeDialog"
+﻿<UserControl x:Class="YellowstonePathology.UI.Billing.AddCPTCodePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:YellowstonePathology.UI.Billing"
-      FontSize="12" Height="300" Width="1050" WindowStyle="ToolWindow"
-      WindowStartupLocation="CenterScreen" Name="ImmediateExamCorrelationWindow">
+      FontSize="12">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -14,11 +13,13 @@
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" Grid.Column="0" Margin="5">
+        <TextBlock Grid.Row="0" Grid.Column="1" Margin="5" HorizontalAlignment="Stretch" FontSize="14" FontWeight="Bold" Text="{Binding Path=PageHeaderText}" />
+        <Grid Grid.Row="1" Grid.Column="0" Margin="5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
@@ -44,7 +45,7 @@
 
         </Grid>
 
-        <ListView Name="ListViewPanelSetOrderCPTCode" Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Path=PanelSetOrder.PanelSetOrderCPTCodeCollection}" Margin="10,2,2,2">
+        <ListView Name="ListViewPanelSetOrderCPTCode" Grid.Column="1" Grid.Row="1" ItemsSource="{Binding Path=PanelSetOrder.PanelSetOrderCPTCodeCollection}" Margin="10,2,2,2">
             <ListView.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="Delete" Click="MenuItemDeletePanelSetOrderCPTCodes_Click"></MenuItem>
@@ -66,8 +67,8 @@
         </ListView>
 
         <Button Name="ButtonAdd" Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Center" Margin="5,5,5,5" Click="ButtonAdd_Click">Add</Button>
-        <Button Name="ButtonNext" Grid.Column="1" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonOK_Click">OK</Button>
+        <Button Name="ButtonNext" Grid.Column="1" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonNext_Click">Next ></Button>
 
     </Grid>
 
-</Window>
+</UserControl>
