--- a/YellowstonePathology/UI/Test/MPNStandardReflexPage.xaml
+++ b/YellowstonePathology/UI/Test/MPNStandardReflexPage.xaml
@@ -45,22 +45,26 @@
                 <Hyperlink Click="HyperLinkOrderJak2Exon1214_Click" FontSize="14">JAK2 Exon 12-14</Hyperlink>
 			</TextBlock>
 
-			<TextBlock Grid.Column="0" Grid.Row="2" Margin="0,20,0,0" FontWeight="Bold" FontSize="16">Options</TextBlock>
+            <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">
+                <Hyperlink Click="HyperLinkOrderMPL_Click" FontSize="14">MPL</Hyperlink>
+            </TextBlock>
 
-            <TextBlock Name="TextBlockPreviousResults" Grid.Column="0" Grid.Row="3" Margin="5,3,0,5">
+            <TextBlock Grid.Column="0" Grid.Row="3" Margin="0,20,0,0" FontWeight="Bold" FontSize="16">Options</TextBlock>
+
+            <TextBlock Name="TextBlockPreviousResults" Grid.Column="0" Grid.Row="4" Margin="5,3,0,5">
 					<Hyperlink Click="HyperLinkPreviousResults_Click" FontSize="14">Previous Results</Hyperlink>
             </TextBlock>
                        
 
-			<TextBlock Grid.Column="0" Grid.Row="4" Margin="5,3,0,0">                    
+			<TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkAcceptResults_Click" FontSize="14">Accept Results</Hyperlink>
 			</TextBlock>
 
-            <TextBlock Name="TextBlockShowDocument" Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">                    
+            <TextBlock Name="TextBlockShowDocument" Grid.Column="0" Grid.Row="6" Margin="5,3,0,0">                    
                 <Hyperlink Click="HyperLinkShowDocument_Click" FontSize="14">Show Document</Hyperlink>
 			</TextBlock>
 
-			<TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,0">
+			<TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,0">
                 <Hyperlink Click="HyperLinkFinalizeResults_Click" FontSize="14">Finalize</Hyperlink>
 			</TextBlock>
 
@@ -92,7 +96,8 @@
 			        <RowDefinition Height="Auto"></RowDefinition>
 			        <RowDefinition Height="Auto"></RowDefinition>
 			        <RowDefinition Height="Auto"></RowDefinition>
-			        <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
 			        <RowDefinition Height="Auto"></RowDefinition>
 			        <RowDefinition Height="Auto"></RowDefinition>
 			        <RowDefinition Height="Auto"></RowDefinition>
@@ -111,20 +116,23 @@
                 <TextBlock Grid.Column="0" Grid.Row="2" FontWeight="Bold" Margin="2,2,2,2">JAK2 Exon 12-14 Result:</TextBlock>
                 <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderMPNStandardReflex.JAK2Exon1214Result}" />
 
-                <TextBlock Grid.Column="0" Grid.Row="3" FontWeight="Bold" Margin="2,2,2,2">JAK2 Comment:</TextBlock>
-                <TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderMPNStandardReflex.Comment}" />
+                <TextBlock Grid.Column="0" Grid.Row="3" FontWeight="Bold" Margin="2,2,2,2">MPL Result:</TextBlock>
+                <TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderMPNStandardReflex.MPLResult}" />
+
+                <TextBlock Grid.Column="0" Grid.Row="4" FontWeight="Bold" Margin="2,2,2,2">JAK2 Comment:</TextBlock>
+                <TextBox Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderMPNStandardReflex.Comment}" />
             
-                <TextBlock Grid.Column="0" Grid.Row="4" FontWeight="Bold" Margin="2,2,2,2">Interpretation:</TextBlock>
-                <TextBox Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderMPNStandardReflex.Interpretation}" TextWrapping="Wrap" AcceptsReturn="True" />
+                <TextBlock Grid.Column="0" Grid.Row="5" FontWeight="Bold" Margin="2,2,2,2">Interpretation:</TextBlock>
+                <TextBox Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderMPNStandardReflex.Interpretation}" TextWrapping="Wrap" AcceptsReturn="True" />
 
-		        <TextBlock Grid.Column="0" Grid.Row="6" FontWeight="Bold" Margin="2,2,2,2">Method:</TextBlock>
-                <TextBox Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderMPNStandardReflex.Method}" TextWrapping="Wrap" AcceptsReturn="True" />
+		        <TextBlock Grid.Column="0" Grid.Row="7" FontWeight="Bold" Margin="2,2,2,2">Method:</TextBlock>
+                <TextBox Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderMPNStandardReflex.Method}" TextWrapping="Wrap" AcceptsReturn="True" />
 
-		        <TextBlock Grid.Column="0" Grid.Row="8" FontWeight="Bold" Margin="2,2,2,2">References:</TextBlock>
-                <TextBox Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderMPNStandardReflex.ReportReferences}" TextWrapping="Wrap" AcceptsReturn="True" />
+		        <TextBlock Grid.Column="0" Grid.Row="9" FontWeight="Bold" Margin="2,2,2,2">References:</TextBlock>
+                <TextBox Grid.Column="0" Grid.Row="10" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderMPNStandardReflex.ReportReferences}" TextWrapping="Wrap" AcceptsReturn="True" />
 
-		        <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="10" FontWeight="Bold" Margin="2,2,2,2">Current Orders</TextBlock>
-		        <ListView Name="ListBoxPanelSetOrders" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="11" Margin="2,2,2,2" HorizontalAlignment="Stretch"
+		        <TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="11" FontWeight="Bold" Margin="2,2,2,2">Current Orders</TextBlock>
+		        <ListView Name="ListBoxPanelSetOrders" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="12" Margin="2,2,2,2" HorizontalAlignment="Stretch"
                             ItemsSource="{Binding Path=AccessionOrder.PanelSetOrderCollection}">
 			        <ListView.View>
 				        <GridView>
