--- a/YellowstonePathology/Policy/PolicyExplorer.xaml
+++ b/YellowstonePathology/Policy/PolicyExplorer.xaml
@@ -24,17 +24,17 @@
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <TreeView Name="TreeViewDirectories"  Grid.Column="0" Grid.Row="0" Margin="2" ItemsSource="{Binding Path=DirectoryCollection}" BorderThickness="1" HorizontalAlignment="Stretch">
+        <TreeView Name="TreeViewDirectories"  Grid.Column="0" Grid.Row="0" Margin="2" ItemsSource="{Binding Path=Directories}" BorderThickness="1" HorizontalAlignment="Stretch">
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate ItemsSource = "{Binding Path=Subdirectories}">
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding Path=DirectoryName}"/>
+                        <TextBlock Text="{Binding Path=Name}" Margin="2,2,2,2"/>
                     </StackPanel>
                 </HierarchicalDataTemplate>
             </TreeView.ItemTemplate>
             <TreeView.ContextMenu>
                 <ContextMenu>
-                    <MenuItem Header="Add Folder" Click="ContextMenuAddFolder_Click"></MenuItem>
+                    <MenuItem Header="Add Directory" Click="ContextMenuAddDirectory_Click"></MenuItem>
                 </ContextMenu>
             </TreeView.ContextMenu>
         </TreeView>
