--- a/YellowstonePathology/Policy/PolicyExplorer.xaml
+++ b/YellowstonePathology/Policy/PolicyExplorer.xaml
@@ -22,6 +22,7 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
         <TreeView Name="TreeViewDirectories"  Grid.Column="0" Grid.Row="0" Margin="2" ItemsSource="{Binding Path=Directories}" BorderThickness="1" HorizontalAlignment="Stretch">
@@ -38,5 +39,7 @@
                 </ContextMenu>
             </TreeView.ContextMenu>
         </TreeView>
+
+        <Button Grid.Column="0" Grid.Row="1" Click="ButtonDoIt_Click" Margin="2,2,2,2" Height="30" Width="50" HorizontalAlignment="Left">DO IT</Button>
     </Grid>
 </Window>
